Fixed hover effect bugs, canged blog post templates to show text or title, clipped homepage snippet to character length

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -214,7 +214,7 @@ a {
 }
 a.cover:hover,
 a .cover:hover,
-a:hover img {
+.work a:hover figure img {
 		box-shadow: 0px 4px 0px var(--brand-color);
 		transition: all var(--slow);
 }
@@ -299,8 +299,13 @@ main.notes,
 main.play,
 main.work {
 	& header {
-		margin-bottom: var(--xl);
+		margin-bottom: var(--l);
+		padding-bottom: var(--l);
 		border-bottom: 1px solid var(--light-gray-color);
+	}
+	& article header {
+		margin-bottom: 0;
+		border-bottom: none;
 	}
 }
 main.play {
@@ -320,7 +325,8 @@ main.play {
 			justify-content: center;
 			background-color: var(--light-gray-color);
 			& img, & p {
-				width: 100%;
+				width: auto;
+				max-width: 100%;
 				flex: 0 1 auto;
 			}
 			& img {
@@ -353,7 +359,7 @@ article {
 }
 .post {
 	display: grid;
-	grid-template-columns: minmax(min-content, 1fr) minmax(476px, 1fr);
+	grid-template-columns: minmax(min-content, 480px) minmax(476px, 1fr);
 	grid-template-rows: auto;
 	grid-gap: var(--l);
 	margin-top: var(--l);
@@ -547,16 +553,19 @@ article {
 		margin-bottom: var(--l);
 		& a {
 			text-decoration: none;
-			& img {
-				width: 100%;
+			object-fit: contain;
+			& figure {
 				height: auto;
+				& img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
 			}
 			& p {
 				margin-bottom: 0;
 			}
-			&:hover img {
-					box-shadow: 0px 4px 0px var(--brand-color);
-			}
+
 		}
 	}
 }
@@ -583,6 +592,27 @@ article {
 		border-bottom: 1px solid var(--light-gray-color);
 		& a {
 			text-decoration: none;
+		}
+	}
+}
+.thumbs {
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: var(--l);
+	margin-bottom: var(--l);
+	& a {
+		height: 80px;
+		margin-right: 1px;
+		margin-bottom: 1px;
+		& img {
+			height: 100%;
+			width: auto;
+			transition: var(--fast);
+		}
+		&:hover {
+			& img {
+				transform: scale(1.1);
+			}
 		}
 	}
 }
@@ -623,27 +653,7 @@ article {
 		}
 	}
 }
-.thumbs {
-	display: flex;
-	flex-wrap: wrap;
-	margin-top: var(--l);
-	margin-bottom: var(--l);
-	& a {
-		transition: var(--fast);
-		height: 80px;
-		margin-right: 1px;
-		margin-bottom: 1px;
-		& img {
-			height: 100%;
-			width: auto;
-		}
-		&:hover {
-			& img {
-				transform: scale(1.1);
-			}
-		}
-	}
-}
+
 
 /*----------------------------
 	# Main navigation
